--- a/src/core/styles/components/button-group/_button-group-theme.scss
+++ b/src/core/styles/components/button-group/_button-group-theme.scss
@@ -106,7 +106,7 @@
         $item-text-color: igx-color($palette, 'grays', 500),
         $icon-text-color: igx-color($palette, 'grays', 500),
 
-        $item-background: $white,
+        $item-background: #fff,
         $item-border-color: transparent,
 
         // HOVER
