--- a/src/core/styles/components/input/_input-theme.scss
+++ b/src/core/styles/components/input/_input-theme.scss
@@ -242,7 +242,7 @@
     }
 
     %igx-search-input {
-        background: $white;
+        background: #fff;
         padding: $input-search-padding;
         border-radius: 2px;
         font-size: $input-font-size;
