--- a/src/core/styles/components/list/_list-theme.scss
+++ b/src/core/styles/components/list/_list-theme.scss
@@ -48,7 +48,7 @@
 
 @mixin igx-list($theme, $palette: $default-palette) {
     $default-theme: igx-list-theme(
-        $background: $white,
+        $background: #fff,
         $header-text-color: igx-color($palette, 'secondary'),
         $item-text-color: igx-color($palette, 'grays', 800),
         $item-background-active: igx-color($palette, 'grays', 100),
