--- a/src/core/styles/components/slider/_slider-theme.scss
+++ b/src/core/styles/components/slider/_slider-theme.scss
@@ -62,7 +62,7 @@
     $slider-label-font-size: rem(11px);
     $slider-label-font-weight: 600;
     $slider-label-padding: 0 2px;
-    $slider-background--start: $white;
+    $slider-background--start: #fff;
 
     %igx-slider-display {
         display: flex;
