--- a/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
+++ b/src/core/styles/components/grid-filtering/_grid-filtering-theme.scss
@@ -49,14 +49,14 @@
 @mixin igx-grid-filtering($theme, $palette: $default-palette) {
     $default-theme: igx-grid-filtering-theme(
         $toggle-icon-color: inherit,
-        $toggle-icon-hover-color: $white,
+        $toggle-icon-hover-color: #fff,
         $toggle-icon-active-color: igx-contrast-color($palette, 'secondary'),
         $toggle-icon-filtered-color: igx-color($palette, 'secondary'),
         $toggle-hover-background: igx-color($palette, 'grays', 300),
         $toggle-active-background: igx-color($palette, 'secondary'),
         $toggle-filtered-background: transparent,
 
-        $menu-background: $white,
+        $menu-background: #fff,
         $menu-text-color: igx-color($palette, 'grays', 900),
         $menu-button-text-color: igx-color($palette, 'secondary')
     );
