refactor(demos): pass the default palette to the igx-theme in demos

--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -2,10 +2,4 @@
 
 // Generating a palette
 @include igx-core();
-@include igx-theme();
-
-$dialog-theme: igx-dialog-theme(
-    $background: black
-);
-
-@include igx-dialog($dialog-theme);
+@include igx-theme($default-palette);
