fix(themes): icon fix for inactive state

--- a/src/core/styles/components/icon/_icon-theme.scss
+++ b/src/core/styles/components/icon/_icon-theme.scss
@@ -52,6 +52,6 @@
     }
 
     %igx-icon--inactive {
-        color: map-get($this, 'disabled-color');
+        color: map-get($this, 'disabled-color') !important;
     }
 }
