refactor(themes): clean up the global namespace even more
Deleted unused variables polluting the global namespace.

--- a/src/core/styles/typography/_typography.scss
+++ b/src/core/styles/typography/_typography.scss
@@ -63,6 +63,10 @@
     $blockquote-font-size-phone: rem(20px);
     $blockquote-line-height-phone: rem(27px);
 
+
+    $medium-screen: 768px;
+    $large-screen: 1024px;
+
     a {
         text-decoration: none;
         color: $link-color;
