--- a/src/core/styles/base/utilities/_mixins.scss
+++ b/src/core/styles/base/utilities/_mixins.scss
@@ -1,6 +1,6 @@
 ////
 /// @group Utilities
-/// @author Simeon Simeonoff
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
 ////
 
 /// Hides the element from the DOM.
