--- a/src/core/styles/components/badge/_badge-theme.scss
+++ b/src/core/styles/components/badge/_badge-theme.scss
@@ -1,3 +1,22 @@
+////
+/// @group themes
+/// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
+////
+
+/// Badge Theme
+/// @param {Color} $icon-color [null] - The icon color used.
+/// @param {Color} $text-color [null] - The text color used.
+/// @param {Color} $border-color [null] - The border color used.
+/// @param {Color} $background-color [null] - The background color used.
+/// @param {Bool} $disable-shadow [true] - Sets the badge shadow visibility.
+/// @param {Bool} $disable-border [true] - Sets the badge border visibility.
+/// @requires text-contrast
+/// @example scss Change the text and icon colors in a badge
+///   $my-badge-theme: igx-badge-theme($icon-color: black, $background-color: white);
+///   // Pass the theme to the igx-badge component mixin
+///   igx-badge($my-badge-theme);
 @function igx-badge-theme(
     $icon-color: null,
     $text-color: null,
@@ -27,6 +46,15 @@
     );
 }
 
+/// Badge Component
+/// @param {Map} $theme - The theme used to style the component.
+/// @param {Map} $palette [$default-palette] - The palette used as basis for styling the component.
+/// @requires igx-badge-theme
+/// @requires igx-elevation
+/// @requires igx-color
+/// @requires extend
+/// @requires rem
+/// @requires {variable} $elevations
 @mixin igx-badge($theme, $palette: $default-palette) {
     $default-theme: igx-badge-theme(
         $icon-color: #fff,
