--- a/src/core/styles/components/date-picker/_date-picker-theme.scss
+++ b/src/core/styles/components/date-picker/_date-picker-theme.scss
@@ -1,3 +1,9 @@
+////
+/// @group themes
+/// @access public
+/// @author <a href="https://github.com/simeonoff" target="_blank">Simeon Simeonoff</a>
+/// @author <a href="https://github.com/desig9stein" target="_blank">Marin Popov</a>
+////
 @function igx-date-picker-theme() {
     @return ();
 }
