--- a/src/time-picker/time-picker.component.html
+++ b/src/time-picker/time-picker.component.html
@@ -1,28 +1,30 @@
-<input igxInput (click)="onOpenEvent($event)" [value]="displayTime" [disabled]="isDisabled" /><button igxToggleAction>V</button>
-
-<ng-container *ngTemplateOutlet="dropdown" ></ng-container>
-<ng-template #listDropDown>
-    <div igxToggle id="listToggle">
-        <!-- <ul>
-            <li *ngFor="let item of dropDownItems" (click)="onItemClicked(item)">
-                {{ getDropDownItem(item) }}
-            </li>
-        </ul> -->
-        <igx-scroll #scroll
-            (onScroll)="updateList($event)"
-            [visibleItemsCount]="5"
-            [itemHeight]="26"
-            [totalItemsCount]="dropDownItems.length">
-            <ul class="list">
-                <li class="list-item" *ngFor="let item of visibleItems" (click)="onItemClicked(item)">
-                    {{ getDropDownItem(item) }}
-                </li>
-            </ul>
-    </igx-scroll>
-    </div>
-</ng-template>
-<ng-template #scrollDropDown>
-    <div igxToggle id="scrollToggle">
-        scroll
-    </div>
-</ng-template>
+<input igxInput (click)="onOpenEvent($event)" [value]="displayTime" [disabled]="isDisabled" />
+<igx-dialog class="igx-date-picker__dialog-popup" closeOnOutsideSelect="true"
+        [leftButtonLabel]="cancelButtonLabel" (onLeftButtonSelect)="triggerCancelSelection()"
+        [rightButtonLabel]="okButtonLabel" (onRightButtonSelect)="triggerOKSelection()">
+        <ng-container #container>
+            <div class="igx-calendar__header">
+                <h5 class="igx-calendar__header-year">{{ selectedAmPm }}</h5>
+                <h2 class="igx-calendar__header-date">
+                    <span>{{ selectedHour }}</span>:<span>{{ selectedMinute }}</span>
+                </h2>
+            </div>
+            <div>
+                <ul #hourList class="list" (wheel)="onHourWheel($event)">
+                    <li class="list-item" *ngFor="let item of hourItems" (click)="onHourClicked(item)">
+                        {{ item }}
+                    </li>
+                </ul>
+                <ul #minuteList class="list" (wheel)="onMinuteWheel($event)">
+                    <li class="list-item" *ngFor="let item of minuteItems" (click)="onMinuteClicked(item)">
+                        {{ item }}
+                    </li>
+                </ul>
+                <ul #ampmList class="list" (wheel)="onAmPmWheel($event)">
+                        <li class="list-item" *ngFor="let item of ampmItems" (click)="onAmPmClicked(item)">
+                            {{ item }}
+                        </li>
+                    </ul>
+            </div>
+        </ng-container>
+</igx-dialog>
